fixed + button iphone

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ button[type="submit"]{
     color: white;
     position: fixed;
     top: 80dvh;
-    left: 85dvw;
+    right: 20px;
     height: 70px;
     width: 70px;
     border-radius: 50%;
